# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  Chip-8-Emulator.sln  Chip-8-Emulator.vcxproj  Chip-8-Emulator.vcxproj.filters  README.md
include/: chip8.h  display.h
src/: chip8.cpp  display.cpp  main.cpp  opcodes.cpp
